--- a/isometrie.html
+++ b/isometrie.html
@@ -1,48 +1,45 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 127.15 107.87">
+<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 128.16 119.28">
   <defs>
     <style>
       .cls-1 {
-        stroke-dasharray: 0 0 .15 1.48;
-      }
-
-      .cls-1, .cls-2, .cls-3, .cls-4, .cls-5, .cls-6, .cls-7, .cls-8, .cls-9, .cls-10, .cls-11, .cls-12, .cls-13 {
-        stroke: #000;
-        stroke-linecap: round;
-        stroke-linejoin: round;
-        stroke-width: .3px;
-      }
-
-      .cls-1, .cls-2, .cls-3, .cls-5, .cls-6, .cls-7, .cls-8, .cls-9, .cls-10, .cls-11, .cls-12, .cls-13 {
-        fill: none;
+        fill: #fffdf8;
       }
 
       .cls-2 {
         stroke-dasharray: 0 0 .15 1.46;
       }
 
+      .cls-2, .cls-3, .cls-4, .cls-5, .cls-6, .cls-7, .cls-8, .cls-9, .cls-10, .cls-11, .cls-12, .cls-13, .cls-14 {
+        stroke-linecap: round;
+        stroke-linejoin: round;
+        stroke-width: .3px;
+      }
+
+      .cls-2, .cls-3, .cls-4, .cls-5, .cls-6, .cls-7, .cls-9, .cls-10, .cls-11, .cls-12, .cls-13, .cls-14 {
+        fill: none;
+        stroke: #fffdf8;
+      }
+
       .cls-3 {
-        stroke-dasharray: 0 0 .15 1.46;
+        stroke-dasharray: 0 0 .15 1.48;
       }
 
       .cls-4 {
-        fill: #fff;
+        stroke-dasharray: 0 0 .15 1.5;
       }
 
       .cls-5 {
-        stroke-dasharray: 0 0 .15 1.5;
-      }
-
-      .cls-6 {
-        stroke-dasharray: 0 0 .15 1.5;
-      }
-
-      .cls-7 {
         stroke-dasharray: 0 0 .15 1.52;
       }
 
+      .cls-7 {
+        stroke-dasharray: 0 0 .15 1.49;
+      }
+
       .cls-8 {
-        stroke-dasharray: 0 0 .15 1.46;
+        fill: #fff;
+        stroke: #5e674b;
       }
 
       .cls-9 {
@@ -53,74 +50,94 @@
         stroke-dasharray: 0 0 .16 1.6;
       }
 
+      .cls-11 {
+        stroke-dasharray: 0 0 .15 1.46;
+      }
+
       .cls-12 {
         stroke-dasharray: 0 0 .15 1.5;
       }
 
       .cls-13 {
-        stroke-dasharray: 0 0 .15 1.49;
+        stroke-dasharray: 0 0 .15 1.46;
+      }
+
+      .cls-14 {
+        stroke-dasharray: 0 0 .15 1.5;
       }
     </style>
   </defs>
   <g id="norden">
-    <path id="on" class="cls-4" d="M20.85,106.82l-1.64,.2-1.82,.1h-1.88l-1.81-.12-1.62-.21-1.31-.29-.92-.36-.46-.39,.03-.41,.51-.39,.96-.35,.26-.05,.54-.12h0l.55-.11,1.64-.2,1.82-.1h1.88l1.81,.12,1.62,.21,1.31,.29,.92,.36,.46,.39-.03,.41-.51,.39-.96,.35-1.35,.28ZM.91,103.16l1.03-.22,5.3,.28-3.3-.71,1.03-.22,5.02,1.08-1.03,.22-5.31-.28,3.31,.71-1.03,.22-5.02-1.08Z"/>
+    <path id="on" class="cls-1" d="M21.29,116.55l-1.27,.15c-.11,.01-.21,.02-.32,.03l-1.53,.08c-.09,0-.19,0-.28,0h-1.6c-.09,0-.19,0-.28-.01l-1.51-.09c-.11,0-.22-.02-.32-.03l-1.24-.16c-.15-.02-.29-.04-.43-.08l-1.1-.24-.92-.36-.46-.39,.03-.41,.51-.39,.96-.35,.26-.05,.54-.12h0l.55-.11,1.48-.18c.11-.01,.21-.02,.32-.03l1.53-.08c.09,0,.19,0,.28,0h1.6c.09,0,.19,0,.28,.01l1.51,.09c.11,0,.22,.02,.32,.03l1.24,.16c.15,.02,.29,.04,.43,.08l1.1,.24,.92,.36,.46,.39-.03,.41-.51,.39-.64,.23c-.21,.08-.43,.14-.66,.19l-.81,.17c-.14,.03-.28,.05-.42,.07Zm-19.73-3.68l.4-.09c.42-.09,.85-.13,1.28-.1l4.66,.24-3.3-.71h0c.68-.15,1.38-.15,2.05,0l3.99,.86-.4,.09c-.42,.09-.85,.13-1.28,.1l-4.67-.24,3.31,.71h0c-.68,.15-1.38,.15-2.05,0l-3.99-.86Z"/>
   </g>
-  <g id="_-0-1" data-name="2-0-1">
-    <path id="on-2" data-name="on" class="cls-4" d="M75.2,93.31v-11.26l28.63,9.69v11.26l-28.63-9.69Zm28.63-1.57l-28.63-9.69v-11.26l25.23,8.54h0l3.39,1.15v11.26Zm0,11.26v-11.26l23.18-3.2v11.26l-.45,.06-1.41,.2v-9.53l-7.63,1.06-12.19,1.69v9.53l-1.49,.21Zm23.18-14.47l-23.18,3.2v-11.26l23.18-3.2v11.26Zm-1.86,1.99v9.53h0l-7.63-2.58v-5.89l7.63-1.06Zm-7.63,1.06v5.89l-12.19,1.69v-5.89l12.19-1.69Zm-12.19,7.58l12.19-1.69,7.63,2.58-19.82,2.74v-3.64Zm-1.49-18.68l-3.39-1.15,23.18-3.2h0l3.39,1.15-23.18,3.2Zm19.78-4.35l-23.18,3.2h0v-12.22l23.18-3.2v12.22h0Zm-48.41-17.56l23.18-3.2,25.23,8.54-23.18,3.2-25.23-8.54Zm0,12.22v-12.22l25.23,8.54v12.22l-25.23-8.54Zm42.31,13.49v-3.96l7.63-1.06v3.96l-7.63,1.06Zm0-3.96v3.96l-12.19,1.69v-3.96l12.19-1.69Zm-12.19,9.49v-3.84l12.19-1.69,7.63-1.06v3.84l-19.82,2.74h0Z"/>
-  </g>
-  <g id="_-0-2" data-name="2-0-2">
-    <path id="on-3" data-name="on" class="cls-4" d="M57.58,95.74v-8.62l23.07,7.81,5.55-.77v11.26l-28.62-9.69Zm28.62,9.69v-11.26l17.62-2.44v11.26l-.52,.07-1.34,.19h0v-9.53l-7.63,1.06-6.64,.92v9.53l-1.49,.21Zm15.77-2.18h0l-7.63-2.58v-5.89l7.63-1.06v9.53Zm-7.63-8.48v5.89l-6.64,.92v-5.89l6.64-.92Zm-6.64,6.81l6.64-.92,7.63,2.58-14.27,1.97v-3.64Zm-35.67-16.34v-11.26l25.23,8.54h0l3.39,1.15v11.26l-23.07-7.81-5.55-1.88Zm28.62-1.57l-3.39-1.15,23.17-3.2h0l3.39,1.15-23.18,3.2Zm19.78-4.35l-23.17,3.2h0v-12.22l23.17-3.2v12.22h0Zm3.39,1.15v11.26l-17.62,2.44-5.55,.77v-11.26l23.18-3.2Zm-51.8-18.71l23.18-3.2,25.23,8.54-23.17,3.2-25.23-8.54Zm0,12.22v-12.22l25.23,8.54v12.22l-25.23-8.54Zm42.31,13.49v-3.96l7.63-1.06v3.96l-7.63,1.06Zm0-3.96v3.96l-12.19,1.69v-3.96l12.19-1.69Zm-12.19,9.49v-3.84l12.19-1.69,7.63-1.06v3.84l-19.83,2.74Z"/>
+  <g id="text">
+    <g>
+      <path class="cls-1" d="M.69,56.78h.57v2.41h2.93v-2.41h.57v5.75h-.57v-2.77H1.27v2.77H.69v-5.75Z"/>
+      <path class="cls-1" d="M10.31,58.27v4.25h-.54v-.73c-.23,.28-.49,.49-.77,.63s-.6,.21-.94,.21c-.6,0-1.12-.22-1.54-.65-.43-.44-.64-.97-.64-1.59s.21-1.14,.64-1.57c.43-.44,.95-.65,1.55-.65,.35,0,.66,.07,.95,.22s.53,.37,.74,.67v-.78h.54Zm-2.19,.42c-.3,0-.59,.07-.84,.22-.26,.15-.46,.36-.61,.63-.15,.27-.23,.56-.23,.86s.08,.58,.23,.86c.15,.27,.36,.49,.62,.64s.54,.23,.83,.23,.58-.08,.85-.23c.27-.15,.47-.36,.62-.61,.14-.26,.22-.55,.22-.87,0-.49-.16-.9-.49-1.23-.32-.33-.72-.5-1.2-.5Z"/>
+      <path class="cls-1" d="M11.47,58.27h.55v1.98c0,.48,.03,.82,.08,1,.08,.26,.23,.47,.45,.62,.22,.15,.48,.23,.79,.23s.56-.07,.78-.22c.21-.15,.36-.34,.44-.58,.05-.16,.08-.51,.08-1.04v-1.98h.56v2.09c0,.59-.07,1.03-.21,1.32s-.34,.53-.62,.7-.62,.25-1.03,.25-.76-.08-1.04-.25-.48-.4-.62-.7-.21-.75-.21-1.36v-2.05Z"/>
+      <path class="cls-1" d="M18.54,58.74l-.35,.36c-.29-.28-.58-.43-.86-.43-.18,0-.33,.06-.46,.18s-.19,.25-.19,.41c0,.14,.05,.27,.16,.39,.1,.13,.32,.28,.66,.45,.41,.21,.68,.41,.83,.61,.14,.2,.22,.42,.22,.67,0,.35-.12,.64-.37,.89s-.55,.36-.92,.36c-.25,0-.48-.05-.7-.16-.22-.11-.41-.25-.55-.44l.34-.39c.28,.31,.58,.47,.89,.47,.22,0,.41-.07,.56-.21,.15-.14,.23-.31,.23-.5,0-.16-.05-.3-.15-.42-.1-.12-.33-.27-.69-.45-.38-.2-.64-.39-.78-.59-.14-.19-.21-.41-.21-.66,0-.32,.11-.59,.33-.8,.22-.21,.5-.32,.84-.32,.39,0,.79,.19,1.18,.57Z"/>
+      <path class="cls-1" d="M24.52,56.63h.12v4.01h.7v.55h-.7v1.34h-.57v-1.34h-2.75l3.2-4.55Zm-.45,4.01v-2.41l-1.7,2.41h1.7Z"/>
+    </g>
+    <g>
+      <path class="cls-1" d="M103.31,111.08h.57v2.41h2.93v-2.41h.57v5.75h-.57v-2.77h-2.93v2.77h-.57v-5.75Z"/>
+      <path class="cls-1" d="M112.92,112.58v4.25h-.54v-.73c-.23,.28-.49,.49-.77,.63s-.6,.21-.94,.21c-.6,0-1.12-.22-1.54-.65-.43-.44-.64-.97-.64-1.59s.21-1.14,.64-1.57c.43-.44,.95-.65,1.55-.65,.35,0,.67,.07,.95,.22s.53,.37,.74,.67v-.78h.54Zm-2.19,.42c-.3,0-.58,.07-.84,.22-.26,.15-.46,.36-.62,.63-.15,.27-.23,.56-.23,.86s.08,.58,.23,.86c.15,.27,.36,.49,.62,.64s.54,.23,.83,.23,.58-.08,.85-.23c.27-.15,.47-.36,.62-.61,.14-.26,.22-.55,.22-.87,0-.49-.16-.9-.49-1.23-.32-.33-.72-.5-1.2-.5Z"/>
+      <path class="cls-1" d="M114.08,112.58h.55v1.98c0,.48,.03,.82,.08,1,.08,.26,.23,.47,.45,.62,.22,.15,.48,.23,.79,.23s.56-.07,.78-.22c.21-.15,.36-.34,.44-.58,.05-.16,.08-.51,.08-1.04v-1.98h.56v2.09c0,.59-.07,1.03-.21,1.32s-.34,.53-.62,.7-.62,.25-1.03,.25-.76-.08-1.04-.25-.48-.4-.62-.7-.21-.75-.21-1.36v-2.05Z"/>
+      <path class="cls-1" d="M121.16,113.04l-.35,.36c-.29-.28-.58-.43-.86-.43-.18,0-.33,.06-.46,.18-.13,.12-.19,.25-.19,.41,0,.14,.05,.27,.16,.39,.1,.13,.32,.28,.66,.45,.41,.21,.68,.41,.83,.61,.14,.2,.22,.42,.22,.67,0,.35-.12,.64-.37,.89-.24,.24-.55,.36-.92,.36-.25,0-.48-.05-.7-.16-.22-.11-.41-.25-.55-.44l.34-.39c.28,.31,.58,.47,.89,.47,.22,0,.41-.07,.56-.21s.23-.31,.23-.5c0-.16-.05-.3-.15-.42-.1-.12-.33-.27-.69-.45-.38-.2-.64-.39-.78-.59-.14-.19-.21-.41-.21-.66,0-.32,.11-.59,.33-.8,.22-.21,.5-.32,.83-.32,.39,0,.79,.19,1.18,.57Z"/>
+      <path class="cls-1" d="M124.66,112.88h-.55c.02-.57,.21-1.03,.57-1.4,.36-.36,.81-.55,1.35-.55s.96,.17,1.28,.51c.33,.34,.49,.74,.49,1.21,0,.33-.08,.63-.23,.92-.16,.29-.46,.67-.91,1.16l-1.43,1.54h2.65v.55h-3.9l2.2-2.37c.45-.48,.74-.83,.87-1.06,.13-.23,.2-.47,.2-.73,0-.32-.12-.6-.36-.83s-.54-.35-.88-.35c-.37,0-.67,.12-.92,.37-.24,.24-.38,.59-.42,1.03Z"/>
+    </g>
   </g>
   <g id="_-0-0" data-name="2-0-0">
-    <g id="on-4" data-name="on">
+    <g id="on-2" data-name="on">
       <g>
         <g>
-          <polyline class="cls-11" points="98.37 90.03 98.37 90.1 98.3 90.11"/>
-          <polyline class="cls-1" points="96.84 90.32 81.2 92.48 58.35 84.74"/>
-          <polyline class="cls-11" points="57.65 84.51 57.58 84.48 57.65 84.47"/>
-          <line class="cls-5" x1="59.13" y1="84.27" x2="97.56" y2="78.95"/>
-          <polyline class="cls-11" points="98.3 78.85 98.37 78.84 98.37 78.92"/>
-          <line class="cls-3" x1="98.37" y1="80.38" x2="98.37" y2="89.3"/>
+          <polyline class="cls-6" points="99.02 90.03 99.02 90.1 98.95 90.11"/>
+          <polyline class="cls-3" points="97.49 90.32 81.85 92.48 59 84.74"/>
+          <polyline class="cls-6" points="58.3 84.51 58.23 84.48 58.3 84.47"/>
+          <line class="cls-4" x1="59.78" y1="84.27" x2="98.21" y2="78.95"/>
+          <polyline class="cls-6" points="98.95 78.85 99.02 78.84 99.02 78.92"/>
+          <line class="cls-2" x1="99.02" y1="80.38" x2="99.02" y2="89.3"/>
         </g>
         <g>
-          <line class="cls-11" x1="81.2" y1="92.48" x2="81.27" y2="92.5"/>
-          <line class="cls-10" x1="82.79" y1="93.02" x2="85.37" y2="93.89"/>
-          <polyline class="cls-11" points="86.13 94.15 86.2 94.17 86.13 94.18"/>
-          <polyline class="cls-12" points="84.64 94.39 69.59 96.45 4.9 74.55"/>
-          <polyline class="cls-11" points="4.19 74.31 4.12 74.29 4.2 74.28"/>
-          <polyline class="cls-13" points="5.67 74.07 60.69 66.47 97.6 78.58"/>
-          <polyline class="cls-11" points="98.3 78.82 98.37 78.84 98.3 78.85"/>
-          <line class="cls-5" x1="96.82" y1="79.06" x2="58.39" y2="84.37"/>
-          <line class="cls-11" x1="57.65" y1="84.47" x2="57.58" y2="84.48"/>
+          <line class="cls-6" x1="81.85" y1="92.48" x2="81.92" y2="92.5"/>
+          <line class="cls-10" x1="83.44" y1="93.02" x2="86.02" y2="93.89"/>
+          <polyline class="cls-6" points="86.78 94.15 86.85 94.17 86.78 94.18"/>
+          <polyline class="cls-12" points="85.29 94.39 70.24 96.45 5.55 74.55"/>
+          <polyline class="cls-6" points="4.84 74.31 4.77 74.29 4.85 74.28"/>
+          <polyline class="cls-7" points="6.32 74.07 61.34 66.47 98.24 78.58"/>
+          <line class="cls-6" x1="98.95" y1="78.82" x2="99.02" y2="78.84"/>
         </g>
         <g>
-          <line class="cls-11" x1="69.59" y1="96.45" x2="69.59" y2="96.53"/>
-          <line class="cls-9" x1="69.59" y1="97.99" x2="69.59" y2="106.91"/>
-          <polyline class="cls-11" points="69.59 107.64 69.59 107.72 69.52 107.69"/>
-          <line class="cls-6" x1="68.1" y1="107.21" x2="4.9" y2="85.82"/>
-          <polyline class="cls-11" points="4.19 85.58 4.12 85.55 4.12 85.48"/>
-          <line class="cls-8" x1="4.12" y1="84.01" x2="4.12" y2="75.09"/>
-          <line class="cls-11" x1="4.12" y1="74.36" x2="4.12" y2="74.29"/>
+          <line class="cls-6" x1="70.24" y1="96.45" x2="70.24" y2="96.53"/>
+          <line class="cls-11" x1="70.24" y1="97.99" x2="70.24" y2="106.91"/>
+          <polyline class="cls-6" points="70.24 107.64 70.24 107.72 70.17 107.69"/>
+          <line class="cls-14" x1="68.75" y1="107.21" x2="5.55" y2="85.82"/>
+          <polyline class="cls-6" points="4.84 85.58 4.77 85.55 4.77 85.48"/>
+          <line class="cls-9" x1="4.77" y1="84.01" x2="4.77" y2="75.09"/>
+          <line class="cls-6" x1="4.77" y1="74.36" x2="4.77" y2="74.29"/>
         </g>
         <g>
-          <line class="cls-11" x1="86.2" y1="94.17" x2="86.2" y2="94.25"/>
-          <line class="cls-2" x1="86.2" y1="95.71" x2="86.2" y2="104.63"/>
-          <polyline class="cls-11" points="86.2 105.36 86.2 105.44 86.13 105.45"/>
-          <line class="cls-7" x1="84.62" y1="105.65" x2="70.42" y2="107.6"/>
-          <polyline class="cls-11" points="69.67 107.71 69.59 107.72 69.59 107.64"/>
-          <line class="cls-9" x1="69.59" y1="106.18" x2="69.59" y2="97.26"/>
-          <line class="cls-11" x1="69.59" y1="96.53" x2="69.59" y2="96.45"/>
+          <line class="cls-6" x1="86.85" y1="94.17" x2="86.85" y2="94.25"/>
+          <line class="cls-13" x1="86.85" y1="95.71" x2="86.85" y2="104.63"/>
+          <polyline class="cls-6" points="86.85 105.36 86.85 105.44 86.78 105.45"/>
+          <line class="cls-5" x1="85.27" y1="105.65" x2="71.07" y2="107.6"/>
+          <line class="cls-6" x1="70.32" y1="107.71" x2="70.24" y2="107.72"/>
         </g>
       </g>
     </g>
   </g>
+  <g id="_-0-1" data-name="2-0-1">
+    <path id="on-3" data-name="on" class="cls-8" d="M75.85,93.31v-11.26l28.63,9.69v11.26l-28.63-9.69Zm28.63-1.57l-28.63-9.69v-11.26l25.23,8.54h0l3.39,1.15v11.26Zm0,11.26v-11.26l23.18-3.2v11.26l-.45,.06-1.41,.2v-9.53l-7.63,1.06-12.19,1.69v9.53l-1.49,.21Zm23.18-14.47l-23.18,3.2v-11.26l23.18-3.2v11.26Zm-1.86,1.99v9.53h0l-7.63-2.58v-5.89l7.63-1.06Zm-7.63,1.06v5.89l-12.19,1.69v-5.89l12.19-1.69Zm-12.19,7.58l12.19-1.69,7.63,2.58-19.82,2.74v-3.64Zm-1.49-18.68l-3.39-1.15,23.18-3.2h0l3.39,1.15-23.18,3.2Zm19.78-4.35l-23.18,3.2h0v-12.22l23.18-3.2v12.22h0Zm-48.41-17.56l23.18-3.2,25.23,8.54-23.18,3.2-25.23-8.54Zm0,12.22v-12.22l25.23,8.54v12.22l-25.23-8.54Zm42.31,13.49v-3.96l7.63-1.06v3.96l-7.63,1.06Zm0-3.96v3.96l-12.19,1.69v-3.96l12.19-1.69Zm-12.19,9.49v-3.84l12.19-1.69,7.63-1.06v3.84l-19.82,2.74h0Z"/>
+  </g>
+  <g id="_-0-2" data-name="2-0-2">
+    <path id="on-4" data-name="on" class="cls-8" d="M58.23,95.74v-8.62l23.07,7.81,5.55-.77v11.26l-28.62-9.69Zm28.62,9.69v-11.26l17.62-2.44v11.26l-.52,.07-1.34,.19h0v-9.53l-7.63,1.06-6.64,.92v9.53l-1.49,.21Zm15.77-2.18h0l-7.63-2.58v-5.89l7.63-1.06v9.53Zm-7.63-8.48v5.89l-6.64,.92v-5.89l6.64-.92Zm-6.64,6.81l6.64-.92,7.63,2.58-14.27,1.97v-3.64Zm-35.67-16.34v-11.26l25.23,8.54h0l3.39,1.15v11.26l-23.07-7.81-5.55-1.88Zm28.62-1.57l-3.39-1.15,23.17-3.2h0l3.39,1.15-23.18,3.2Zm19.78-4.35l-23.17,3.2h0v-12.22l23.17-3.2v12.22h0Zm3.39,1.15v11.26l-17.62,2.44-5.55,.77v-11.26l23.18-3.2Zm-51.8-18.71l23.18-3.2,25.23,8.54-23.17,3.2-25.23-8.54Zm0,12.22v-12.22l25.23,8.54v12.22l-25.23-8.54Zm42.31,13.49v-3.96l7.63-1.06v3.96l-7.63,1.06Zm0-3.96v3.96l-12.19,1.69v-3.96l12.19-1.69Zm-12.19,9.49v-3.84l12.19-1.69,7.63-1.06v3.84l-19.83,2.74Z"/>
+  </g>
   <g id="_-0-1-2" data-name="4-0-1">
-    <path id="on-5" data-name="on" class="cls-4" d="M26.23,46.62v-3.84l5.09,1.72v3.84l-5.09-1.72Zm0-3.84v5.31l-1.1,.15v-11.23l46.35-6.41v6.44l-1.09-.37v2.43l-39.07,5.4-5.09-1.72Zm0,5.31v-1.46l5.09,1.72v1.46l-5.09-1.72Zm44.16-8.98v-2.43l1.09,.37,3.99,1.35-5.09,.7Zm-45.26-2.09v11.23L.15,39.78v-11.23l24.99,8.46ZM.15,28.55l46.35-6.41,24.99,8.46-46.35,6.41L.15,28.55Zm31.17,19.8v-3.84l39.07-5.4,5.09-.7v3.84l-44.16,6.11Zm0,0l44.16-6.11v1.46l-44.16,6.11v-1.46Z"/>
+    <path id="on-5" data-name="on" class="cls-8" d="M26.88,46.62v-3.84l5.09,1.72v3.84l-5.09-1.72Zm0-3.84v5.31l-1.1,.15v-11.23l46.35-6.41v6.44l-1.09-.37v2.43l-39.07,5.4-5.09-1.72Zm0,5.31v-1.46l5.09,1.72v1.46l-5.09-1.72Zm44.16-8.98v-2.43l1.09,.37,3.99,1.35-5.09,.7Zm-45.26-2.09v11.23L.8,39.78v-11.23l24.99,8.46ZM.8,28.55l46.35-6.41,24.99,8.46-46.35,6.41L.8,28.55Zm31.17,19.8v-3.84l39.07-5.4,5.09-.7v3.84l-44.16,6.11Zm0,0l44.16-6.11v1.46l-44.16,6.11v-1.46Z"/>
   </g>
   <g id="_-1-1" data-name="4-1-1">
-    <path id="on-6" data-name="on" class="cls-4" d="M26.23,35.4v-3.84l5.09,1.72v3.84l-5.09-1.72Zm0-3.84v5.31l-1.1,.15v-11.23l46.35-6.41v6.44l-1.09-.37v2.43l-39.07,5.4-5.09-1.72Zm0,5.31v-1.46l5.09,1.72v1.46l-5.09-1.72Zm44.16-8.98v-2.43l1.09,.37,3.99,1.35-5.09,.7Zm-45.26-2.09v11.23L.15,28.55v-11.23l24.99,8.46ZM.15,17.33l46.35-6.41,24.99,8.46-46.35,6.41L.15,17.33Zm31.17,19.8v-3.84l39.07-5.4,5.09-.7v3.84l-44.16,6.11Zm0,0l44.16-6.11v1.46l-44.16,6.11v-1.46Z"/>
+    <path id="on-6" data-name="on" class="cls-8" d="M26.88,35.4v-3.84l5.09,1.72v3.84l-5.09-1.72Zm0-3.84v5.31l-1.1,.15v-11.23l46.35-6.41v6.44l-1.09-.37v2.43l-39.07,5.4-5.09-1.72Zm0,5.31v-1.46l5.09,1.72v1.46l-5.09-1.72Zm44.16-8.98v-2.43l1.09,.37,3.99,1.35-5.09,.7Zm-45.26-2.09v11.23L.8,28.55v-11.23l24.99,8.46ZM.8,17.33l46.35-6.41,24.99,8.46-46.35,6.41L.8,17.33Zm31.17,19.8v-3.84l39.07-5.4,5.09-.7v3.84l-44.16,6.11Zm0,0l44.16-6.11v1.46l-44.16,6.11v-1.46Z"/>
   </g>
   <g id="_-2-1" data-name="4-2-1">
-    <path id="on-7" data-name="on" class="cls-4" d="M31.32,25.9v-3.84l25.05-3.46,11.05-1.53,2.97-.41,5.09-.7v3.84l-44.16,6.11Zm0-3.84v3.84l-5.09-1.72v-3.84l4.26,1.44,.82,.28Zm0,5.31l-5.09-1.72v-1.46h0l5.09,1.72v1.46Zm44.16-6.11l-44.16,6.11v-1.46l44.16-6.11v1.46ZM.15,12.02l4.98-.69,.85,.29-3.88,.54,3.88,1.31,20.26,6.86-1.1,.15L.15,12.02Zm1.94,.13l3.88-.54v1.85l-3.88-1.31Zm58.89-1.64l10.5,3.56-1.09,.15-10.5-3.56,1.1-.15Zm-1.1,.15l10.5,3.56v2.43l-2.97,.41-11.05-3.74v-2.17l3.52-.49Zm-3.52,2.65l11.05,3.74-11.05,1.53v-5.27Zm-30.14,7.01h0L5.98,13.47v-1.85l-.85-.29V5.18L30.5,13.77v8l-4.26-1.44ZM41.52,.15l25.4,8.58L30.5,13.77,5.13,5.18,41.52,.15Zm-11.03,13.62l36.43-5.04v.96l-5.94,.82-1.1,.15-3.52,.49v7.43l-25.05,3.46-.82-.28V13.77Zm-5.36,6.71l1.1-.15v5.3l-1.1,.15v-5.31Zm45.26-6.26l1.09-.15v.52l-1.09-.37Zm0,2.43v-2.43l1.09,.37,3.99,1.35-5.09,.7ZM.15,17.33v-5.31l24.99,8.46v5.31L.15,17.33Z"/>
+    <path id="on-7" data-name="on" class="cls-8" d="M31.97,25.9v-3.84l25.05-3.46,11.05-1.53,2.97-.41,5.09-.7v3.84l-44.16,6.11Zm0-3.84v3.84l-5.09-1.72v-3.84l4.26,1.44,.82,.28Zm0,5.31l-5.09-1.72v-1.46h0l5.09,1.72v1.46Zm44.16-6.11l-44.16,6.11v-1.46l44.16-6.11v1.46ZM.8,12.02l4.98-.69,.85,.29-3.88,.54,3.88,1.31,20.26,6.86-1.1,.15L.8,12.02Zm1.94,.13l3.88-.54v1.85l-3.88-1.31Zm58.89-1.64l10.5,3.56-1.09,.15-10.5-3.56,1.1-.15Zm-1.1,.15l10.5,3.56v2.43l-2.97,.41-11.05-3.74v-2.17l3.52-.49Zm-3.52,2.65l11.05,3.74-11.05,1.53v-5.27Zm-30.14,7.01h0L6.62,13.47v-1.85l-.85-.29V5.18L31.15,13.77v8l-4.26-1.44ZM42.17,.15l25.4,8.58L31.15,13.77,5.78,5.18,42.17,.15Zm-11.03,13.62l36.43-5.04v.96l-5.94,.82-1.1,.15-3.52,.49v7.43l-25.05,3.46-.82-.28V13.77Zm-5.36,6.71l1.1-.15v5.3l-1.1,.15v-5.31Zm45.26-6.26l1.09-.15v.52l-1.09-.37Zm0,2.43v-2.43l1.09,.37,3.99,1.35-5.09,.7ZM.8,17.33v-5.31l24.99,8.46v5.31L.8,17.33Z"/>
   </g>
 </svg>
