--- a/isometrie.html
+++ b/isometrie.html
@@ -7,68 +7,42 @@
       }
 
       .cls-2 {
-        stroke-dasharray: 0 0 .15 1.46;
+        stroke-miterlimit: 10;
       }
 
-      .cls-2, .cls-3, .cls-4, .cls-5, .cls-6, .cls-7, .cls-8, .cls-9, .cls-10, .cls-11, .cls-12, .cls-13, .cls-14 {
-        stroke-linecap: round;
-        stroke-linejoin: round;
+      .cls-2, .cls-3, .cls-4, .cls-5 {
         stroke-width: .3px;
       }
 
-      .cls-2, .cls-3, .cls-4, .cls-5, .cls-6, .cls-7, .cls-9, .cls-10, .cls-11, .cls-12, .cls-13, .cls-14 {
+      .cls-2, .cls-4 {
+        stroke: #fff;
+      }
+
+      .cls-2, .cls-4, .cls-5 {
         fill: none;
-        stroke: #fffdf8;
       }
 
       .cls-3 {
-        stroke-dasharray: 0 0 .15 1.48;
-      }
-
-      .cls-4 {
-        stroke-dasharray: 0 0 .15 1.5;
-      }
-
-      .cls-5 {
-        stroke-dasharray: 0 0 .15 1.52;
-      }
-
-      .cls-7 {
-        stroke-dasharray: 0 0 .15 1.49;
-      }
-
-      .cls-8 {
         fill: #fff;
         stroke: #5e674b;
       }
 
-      .cls-9 {
-        stroke-dasharray: 0 0 .15 1.46;
+      .cls-3, .cls-4, .cls-5 {
+        stroke-linecap: round;
+        stroke-linejoin: round;
       }
 
-      .cls-10 {
-        stroke-dasharray: 0 0 .16 1.6;
-      }
-
-      .cls-11 {
-        stroke-dasharray: 0 0 .15 1.46;
-      }
-
-      .cls-12 {
-        stroke-dasharray: 0 0 .15 1.5;
-      }
-
-      .cls-13 {
-        stroke-dasharray: 0 0 .15 1.46;
-      }
-
-      .cls-14 {
+      .cls-5 {
+        stroke: #fffdf8;
         stroke-dasharray: 0 0 .15 1.5;
       }
     </style>
   </defs>
+  <g id="HG"/>
   <g id="norden">
-    <path id="on" class="cls-1" d="M21.29,116.55l-1.27,.15c-.11,.01-.21,.02-.32,.03l-1.53,.08c-.09,0-.19,0-.28,0h-1.6c-.09,0-.19,0-.28-.01l-1.51-.09c-.11,0-.22-.02-.32-.03l-1.24-.16c-.15-.02-.29-.04-.43-.08l-1.1-.24-.92-.36-.46-.39,.03-.41,.51-.39,.96-.35,.26-.05,.54-.12h0l.55-.11,1.48-.18c.11-.01,.21-.02,.32-.03l1.53-.08c.09,0,.19,0,.28,0h1.6c.09,0,.19,0,.28,.01l1.51,.09c.11,0,.22,.02,.32,.03l1.24,.16c.15,.02,.29,.04,.43,.08l1.1,.24,.92,.36,.46,.39-.03,.41-.51,.39-.64,.23c-.21,.08-.43,.14-.66,.19l-.81,.17c-.14,.03-.28,.05-.42,.07Zm-19.73-3.68l.4-.09c.42-.09,.85-.13,1.28-.1l4.66,.24-3.3-.71h0c.68-.15,1.38-.15,2.05,0l3.99,.86-.4,.09c-.42,.09-.85,.13-1.28,.1l-4.67-.24,3.31,.71h0c-.68,.15-1.38,.15-2.05,0l-3.99-.86Z"/>
+    <path id="on" class="cls-1" d="M2.41,111.54l.89-.7,5.29-.7-3.56-.66,.89-.7,5.41,1.01-.89,.7-5.3,.7,3.57,.67-.89,.7-5.41-1.01Z"/>
+    <line class="cls-4" x1="12.62" y1="112.15" x2="17.98" y2="113.12"/>
+    <path id="on-2" data-name="on" class="cls-2" d="M22.36,115.24l-1.28,.8-1.5,.61-1.6,.38-1.6,.12-1.49-.15-1.28-.41-.98-.64-.62-.82-.21-.95,.21-1.02,.62-1.01,.19-.18,.39-.38h0l.4-.38,1.28-.8,1.5-.61,1.6-.38,1.6-.12,1.49,.15,1.28,.41,.98,.64,.62,.82,.21,.95-.21,1.02-.62,1.01-.99,.94Z"/>
   </g>
   <g id="text">
     <g>
@@ -87,57 +61,21 @@
     </g>
   </g>
   <g id="_-0-0" data-name="2-0-0">
-    <g id="on-2" data-name="on">
-      <g>
-        <g>
-          <polyline class="cls-6" points="99.02 90.03 99.02 90.1 98.95 90.11"/>
-          <polyline class="cls-3" points="97.49 90.32 81.85 92.48 59 84.74"/>
-          <polyline class="cls-6" points="58.3 84.51 58.23 84.48 58.3 84.47"/>
-          <line class="cls-4" x1="59.78" y1="84.27" x2="98.21" y2="78.95"/>
-          <polyline class="cls-6" points="98.95 78.85 99.02 78.84 99.02 78.92"/>
-          <line class="cls-2" x1="99.02" y1="80.38" x2="99.02" y2="89.3"/>
-        </g>
-        <g>
-          <line class="cls-6" x1="81.85" y1="92.48" x2="81.92" y2="92.5"/>
-          <line class="cls-10" x1="83.44" y1="93.02" x2="86.02" y2="93.89"/>
-          <polyline class="cls-6" points="86.78 94.15 86.85 94.17 86.78 94.18"/>
-          <polyline class="cls-12" points="85.29 94.39 70.24 96.45 5.55 74.55"/>
-          <polyline class="cls-6" points="4.84 74.31 4.77 74.29 4.85 74.28"/>
-          <polyline class="cls-7" points="6.32 74.07 61.34 66.47 98.24 78.58"/>
-          <line class="cls-6" x1="98.95" y1="78.82" x2="99.02" y2="78.84"/>
-        </g>
-        <g>
-          <line class="cls-6" x1="70.24" y1="96.45" x2="70.24" y2="96.53"/>
-          <line class="cls-11" x1="70.24" y1="97.99" x2="70.24" y2="106.91"/>
-          <polyline class="cls-6" points="70.24 107.64 70.24 107.72 70.17 107.69"/>
-          <line class="cls-14" x1="68.75" y1="107.21" x2="5.55" y2="85.82"/>
-          <polyline class="cls-6" points="4.84 85.58 4.77 85.55 4.77 85.48"/>
-          <line class="cls-9" x1="4.77" y1="84.01" x2="4.77" y2="75.09"/>
-          <line class="cls-6" x1="4.77" y1="74.36" x2="4.77" y2="74.29"/>
-        </g>
-        <g>
-          <line class="cls-6" x1="86.85" y1="94.17" x2="86.85" y2="94.25"/>
-          <line class="cls-13" x1="86.85" y1="95.71" x2="86.85" y2="104.63"/>
-          <polyline class="cls-6" points="86.85 105.36 86.85 105.44 86.78 105.45"/>
-          <line class="cls-5" x1="85.27" y1="105.65" x2="71.07" y2="107.6"/>
-          <line class="cls-6" x1="70.32" y1="107.71" x2="70.24" y2="107.72"/>
-        </g>
-      </g>
-    </g>
+    <path id="on-3" data-name="on" class="cls-5" d="M99.02,90.1l-22.71,3.14-23.62-8,46.32-6.41v11.26Zm0-11.26l-46.32,6.41,23.62,8,5.01,1.7-11.08,1.51L4.77,74.29l56.57-7.82,37.68,12.38ZM4.77,85.55v-11.26l65.47,22.17v11.26L4.77,85.55Zm65.47,22.17v-11.26l11.08-1.51v11.26l-11.08,1.51Z"/>
   </g>
   <g id="_-0-1" data-name="2-0-1">
-    <path id="on-3" data-name="on" class="cls-8" d="M75.85,93.31v-11.26l28.63,9.69v11.26l-28.63-9.69Zm28.63-1.57l-28.63-9.69v-11.26l25.23,8.54h0l3.39,1.15v11.26Zm0,11.26v-11.26l23.18-3.2v11.26l-.45,.06-1.41,.2v-9.53l-7.63,1.06-12.19,1.69v9.53l-1.49,.21Zm23.18-14.47l-23.18,3.2v-11.26l23.18-3.2v11.26Zm-1.86,1.99v9.53h0l-7.63-2.58v-5.89l7.63-1.06Zm-7.63,1.06v5.89l-12.19,1.69v-5.89l12.19-1.69Zm-12.19,7.58l12.19-1.69,7.63,2.58-19.82,2.74v-3.64Zm-1.49-18.68l-3.39-1.15,23.18-3.2h0l3.39,1.15-23.18,3.2Zm19.78-4.35l-23.18,3.2h0v-12.22l23.18-3.2v12.22h0Zm-48.41-17.56l23.18-3.2,25.23,8.54-23.18,3.2-25.23-8.54Zm0,12.22v-12.22l25.23,8.54v12.22l-25.23-8.54Zm42.31,13.49v-3.96l7.63-1.06v3.96l-7.63,1.06Zm0-3.96v3.96l-12.19,1.69v-3.96l12.19-1.69Zm-12.19,9.49v-3.84l12.19-1.69,7.63-1.06v3.84l-19.82,2.74h0Z"/>
+    <path id="on-4" data-name="on" class="cls-3" d="M75.85,93.31v-11.26l28.62,9.69v11.26l-28.62-9.69Zm28.62-1.57l-28.62-9.69v-11.26l25.23,8.54h0l3.39,1.15v11.26Zm0,11.26v-11.26l23.18-3.2v11.26l-.31,.04-1.54,.21v-9.53l-7.63,1.06-12.19,1.69v9.53h0l-1.49,.21Zm23.18-14.47l-23.18,3.2v-11.26l23.18-3.2v11.26Zm-1.86,1.99v9.53h0l-3.32-1.12v-2.26l-4.32,.6v-5.69l7.63-1.06Zm-7.63,1.06v5.69l-12.19,1.69v-5.69l12.19-1.69Zm4.32,7.36l3.32,1.12-3.32,.46v-1.58Zm-18-18.46l-3.39-1.15,23.18-3.2h0l3.39,1.15-23.18,3.2Zm19.78-4.35l-23.18,3.2h0v-12.22l23.18-3.2v12.22h0Zm-48.41-17.56l23.18-3.2,25.23,8.54-23.18,3.2-25.23-8.54Zm0,12.22v-12.22l25.23,8.54v12.22l-25.23-8.54Zm42.31,26.48l4.32-.6v3.84l-16.51,2.28v-3.84l12.19-1.69Zm0-12.99v-3.96l7.63-1.06v3.96l-7.63,1.06Zm0-3.96v3.96l-12.19,1.69v-3.96l12.19-1.69Zm-12.19,9.49v-3.84l12.19-1.69,7.63-1.06v3.84l-19.83,2.74h0Z"/>
   </g>
   <g id="_-0-2" data-name="2-0-2">
-    <path id="on-4" data-name="on" class="cls-8" d="M58.23,95.74v-8.62l23.07,7.81,5.55-.77v11.26l-28.62-9.69Zm28.62,9.69v-11.26l17.62-2.44v11.26l-.52,.07-1.34,.19h0v-9.53l-7.63,1.06-6.64,.92v9.53l-1.49,.21Zm15.77-2.18h0l-7.63-2.58v-5.89l7.63-1.06v9.53Zm-7.63-8.48v5.89l-6.64,.92v-5.89l6.64-.92Zm-6.64,6.81l6.64-.92,7.63,2.58-14.27,1.97v-3.64Zm-35.67-16.34v-11.26l25.23,8.54h0l3.39,1.15v11.26l-23.07-7.81-5.55-1.88Zm28.62-1.57l-3.39-1.15,23.17-3.2h0l3.39,1.15-23.18,3.2Zm19.78-4.35l-23.17,3.2h0v-12.22l23.17-3.2v12.22h0Zm3.39,1.15v11.26l-17.62,2.44-5.55,.77v-11.26l23.18-3.2Zm-51.8-18.71l23.18-3.2,25.23,8.54-23.17,3.2-25.23-8.54Zm0,12.22v-12.22l25.23,8.54v12.22l-25.23-8.54Zm42.31,13.49v-3.96l7.63-1.06v3.96l-7.63,1.06Zm0-3.96v3.96l-12.19,1.69v-3.96l12.19-1.69Zm-12.19,9.49v-3.84l12.19-1.69,7.63-1.06v3.84l-19.83,2.74Z"/>
+    <path id="on-5" data-name="on" class="cls-3" d="M58.23,95.74v-8.62l23.07,7.81v8.62l-23.07-7.81Zm46.25-4.01v11.26l-1.86,.26v-9.53l-7.63,1.06-6.64,.92v9.53l-1.49,.21v-11.26l17.62-2.44Zm-17.62,2.44v11.26l-5.55,.77v-11.26l5.55-.77Zm15.77-.45v5.69l-7.63,1.06v-5.69l7.63-1.06Zm-7.63,1.06v5.69l-3.32,.46v.2l-3.32,.46v-5.89l6.64-.92Zm-6.64,6.81l3.32-.46v3.64l-3.32,.46v-3.64Zm-35.67-16.34v-11.26l25.23,8.54,3.39,1.15v11.26l-23.07-7.81-5.55-1.88Zm28.63-1.57l-3.39-1.15,23.17-3.2h0l3.39,1.15-23.17,3.2Zm19.78-4.35l-23.17,3.2v-12.22l23.17-3.2v12.22h0Zm3.39,1.15v11.26l-17.62,2.44-5.55,.77v-11.26l23.17-3.2Zm-51.8-18.71l23.18-3.2,25.23,8.54-23.17,3.2-25.23-8.54Zm0,12.22v-12.22l25.23,8.54v12.22l-25.23-8.54Zm49.94,25.43v3.84l-10.96,1.51v-3.84l3.32-.46,7.63-1.06Zm-7.63-11.94v-3.96l7.63-1.06v3.96l-7.63,1.06Zm0-3.96v3.96l-12.19,1.69v-3.96l12.19-1.69Zm-12.19,9.49v-3.84l12.19-1.69,7.63-1.06v3.84l-19.83,2.74Z"/>
   </g>
   <g id="_-0-1-2" data-name="4-0-1">
-    <path id="on-5" data-name="on" class="cls-8" d="M26.88,46.62v-3.84l5.09,1.72v3.84l-5.09-1.72Zm0-3.84v5.31l-1.1,.15v-11.23l46.35-6.41v6.44l-1.09-.37v2.43l-39.07,5.4-5.09-1.72Zm0,5.31v-1.46l5.09,1.72v1.46l-5.09-1.72Zm44.16-8.98v-2.43l1.09,.37,3.99,1.35-5.09,.7Zm-45.26-2.09v11.23L.8,39.78v-11.23l24.99,8.46ZM.8,28.55l46.35-6.41,24.99,8.46-46.35,6.41L.8,28.55Zm31.17,19.8v-3.84l39.07-5.4,5.09-.7v3.84l-44.16,6.11Zm0,0l44.16-6.11v1.46l-44.16,6.11v-1.46Z"/>
+    <path id="on-6" data-name="on" class="cls-3" d="M26.88,46.62v-3.84l5.09,1.72v3.84l-5.09-1.72Zm0-3.84v5.31l-1.1,.15v-11.23l46.35-6.41v6.44l-1.09-.37v2.43l-39.07,5.4-5.09-1.72Zm0,5.31v-1.46l5.09,1.72v1.46l-5.09-1.72Zm44.16-8.98v-2.43l1.09,.37,3.99,1.35-5.09,.7Zm-45.26-2.09v11.23L.8,39.78v-11.23l24.99,8.46ZM.8,28.55l46.35-6.41,24.99,8.46-46.35,6.41L.8,28.55Zm31.17,19.8v-3.84l39.07-5.4,5.09-.7v3.84l-44.16,6.11Zm0,0l44.16-6.11v1.46l-44.16,6.11v-1.46Z"/>
   </g>
   <g id="_-1-1" data-name="4-1-1">
-    <path id="on-6" data-name="on" class="cls-8" d="M26.88,35.4v-3.84l5.09,1.72v3.84l-5.09-1.72Zm0-3.84v5.31l-1.1,.15v-11.23l46.35-6.41v6.44l-1.09-.37v2.43l-39.07,5.4-5.09-1.72Zm0,5.31v-1.46l5.09,1.72v1.46l-5.09-1.72Zm44.16-8.98v-2.43l1.09,.37,3.99,1.35-5.09,.7Zm-45.26-2.09v11.23L.8,28.55v-11.23l24.99,8.46ZM.8,17.33l46.35-6.41,24.99,8.46-46.35,6.41L.8,17.33Zm31.17,19.8v-3.84l39.07-5.4,5.09-.7v3.84l-44.16,6.11Zm0,0l44.16-6.11v1.46l-44.16,6.11v-1.46Z"/>
+    <path id="on-7" data-name="on" class="cls-3" d="M26.88,35.4v-3.84l5.09,1.72v3.84l-5.09-1.72Zm0-3.84v5.31l-1.1,.15v-11.23l46.35-6.41v6.44l-1.09-.37v2.43l-39.07,5.4-5.09-1.72Zm0,5.31v-1.46l5.09,1.72v1.46l-5.09-1.72Zm44.16-8.98v-2.43l1.09,.37,3.99,1.35-5.09,.7Zm-45.26-2.09v11.23L.8,28.55v-11.23l24.99,8.46ZM.8,17.33l46.35-6.41,24.99,8.46-46.35,6.41L.8,17.33Zm31.17,19.8v-3.84l39.07-5.4,5.09-.7v3.84l-44.16,6.11Zm0,0l44.16-6.11v1.46l-44.16,6.11v-1.46Z"/>
   </g>
   <g id="_-2-1" data-name="4-2-1">
-    <path id="on-7" data-name="on" class="cls-8" d="M31.97,25.9v-3.84l25.05-3.46,11.05-1.53,2.97-.41,5.09-.7v3.84l-44.16,6.11Zm0-3.84v3.84l-5.09-1.72v-3.84l4.26,1.44,.82,.28Zm0,5.31l-5.09-1.72v-1.46h0l5.09,1.72v1.46Zm44.16-6.11l-44.16,6.11v-1.46l44.16-6.11v1.46ZM.8,12.02l4.98-.69,.85,.29-3.88,.54,3.88,1.31,20.26,6.86-1.1,.15L.8,12.02Zm1.94,.13l3.88-.54v1.85l-3.88-1.31Zm58.89-1.64l10.5,3.56-1.09,.15-10.5-3.56,1.1-.15Zm-1.1,.15l10.5,3.56v2.43l-2.97,.41-11.05-3.74v-2.17l3.52-.49Zm-3.52,2.65l11.05,3.74-11.05,1.53v-5.27Zm-30.14,7.01h0L6.62,13.47v-1.85l-.85-.29V5.18L31.15,13.77v8l-4.26-1.44ZM42.17,.15l25.4,8.58L31.15,13.77,5.78,5.18,42.17,.15Zm-11.03,13.62l36.43-5.04v.96l-5.94,.82-1.1,.15-3.52,.49v7.43l-25.05,3.46-.82-.28V13.77Zm-5.36,6.71l1.1-.15v5.3l-1.1,.15v-5.31Zm45.26-6.26l1.09-.15v.52l-1.09-.37Zm0,2.43v-2.43l1.09,.37,3.99,1.35-5.09,.7ZM.8,17.33v-5.31l24.99,8.46v5.31L.8,17.33Z"/>
+    <path id="on-8" data-name="on" class="cls-3" d="M31.97,25.9v-3.84l25.05-3.46,11.05-1.53,2.97-.41,5.09-.7v3.84l-44.16,6.11Zm0-3.84v3.84l-5.09-1.72v-3.84l4.26,1.44,.82,.28Zm0,5.31l-5.09-1.72v-1.46h0l5.09,1.72v1.46Zm44.16-6.11l-44.16,6.11v-1.46l44.16-6.11v1.46ZM.8,12.02l4.98-.69,.85,.29-3.88,.54,3.88,1.31,20.26,6.86-1.1,.15L.8,12.02Zm1.94,.13l3.88-.54v1.85l-3.88-1.31Zm58.89-1.64l10.5,3.56-1.09,.15-10.5-3.56,1.1-.15Zm-1.1,.15l10.5,3.56v2.43l-2.97,.41-11.05-3.74v-2.17l3.52-.49Zm-3.52,2.65l11.05,3.74-11.05,1.53v-5.27Zm-30.14,7.01h0L6.62,13.47v-1.85l-.85-.29V5.18L31.15,13.77v8l-4.26-1.44ZM42.17,.15l25.4,8.58L31.15,13.77,5.78,5.18,42.17,.15Zm-11.03,13.62l36.43-5.04v.96l-5.94,.82-1.1,.15-3.52,.49v7.43l-25.05,3.46-.82-.28V13.77Zm-5.36,6.71l1.1-.15v5.3l-1.1,.15v-5.31Zm45.26-6.26l1.09-.15v.52l-1.09-.37Zm0,2.43v-2.43l1.09,.37,3.99,1.35-5.09,.7ZM.8,17.33v-5.31l24.99,8.46v5.31L.8,17.33Z"/>
   </g>
 </svg>
